# Atticus

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.production  LICENSE  NEXT_STEPS.md  PHASE2_RESULTS.md  PHASE3_RESULTS.md  Phase2.md  Phase3.md  Phase4.md  README.md  docker-compose.yml  pyproject.toml
data/: test_applications.json
data/ground_truth_v2/: 19025078.yaml  19170096.yaml  19211434.yaml  19290425.yaml  19406513.yaml  19418983.yaml  19439169.yaml  19445647.yaml  19531961.yaml  19551719.yaml
data/sample_office_actions/: 16-123456_non_final_103.txt  19025078_oa.txt  19170096_oa.txt  19211434_oa.txt  19290425_oa.txt  19406513_oa.txt  19418983_oa.txt  19439169_oa.txt  19445647_oa.txt  19531961_oa.txt  19551719_oa.txt
docs/: api-reference.md  data-handling-policy.md  evaluation-methodology.md  qa-checklist.md  trusted-legal-ai-architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.js
frontend/public/: interest.html  landing.html
frontend/src/: App.jsx  index.css
scripts/: annotate.py  compare_evaluations.py  export_audit_trail.py  run_evaluation.py  score_against_ground_truth.py  score_parsing.py  seed_mpep.py  seed_sample_patents.py  validate_anthropic.py  validate_gemini.py  validate_uspto.py
src/: __init__.py  main.py
src/api/: __init__.py  middleware.py
src/config/: __init__.py  data_classification.py  settings.py
src/data/: __init__.py  mpep_indexer.py  office_action_parser.py  patent_fetcher.py  uspto_client.py
src/db/: __init__.py  (+3 more)
tests/: conftest.py
(+81 files in other folders)
