[project]
name = "atticus"
version = "0.1.0"
description = "Verification-first AI assistant for USPTO office action responses (TC 2100/2600)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Zoey Ballard" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.34",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "tenacity>=8.4",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
